# weekly-report

./: .gitignore  Autosize Cols.py  ExcelPivot V2.1.py  Pivot table with subtotals V3.py  Pivot table with subtotals V3.xlsx  ROVWide Room Summary Showing Small Writers.xlsx  SampleChart.xlsx  VL reports via Google API V1.0.py  Weekly Postcard Production Report.py  Weekly VL Rpt V4.3.py  Weekly VL Rpt V4.3dev GIDEON.py  Weekly VL Rpt V4.3dev.py  create sub folder with Google API.py  factory_and_campaign_subtotals.py  factory_and_campaign_subtotals.xlsx  file permissions google api V2.0.py  find folder google api.py  main.py  pyproject.toml  quickstart.py  request_df.xlsx  service_account_setup.md
Work/: Autosize Cols.py  ExcelPivot V1.6.py  ExcelPivot V2.0.py  ExcelPivot V2.1.py  Pivot table with subtotals V2.1.py  Pivot table with subtotals.py  Pivot table with subtotals.xlsx  PivotWSubtotals production.py  PivotWSubtotals production.xlsx  Room Campaign Rpt V1.0.py  Small Writer report no writer.py  Small Writer report.py  Test PySimpleGUI Hello World V1.py  Test chart.py  Test convert gmail with plus email V1.py  Test titles in pymsgbox v1.py  VL reports via Google API V1.0.py  Weekly Pivot table with subtotals.xlsx  Weekly VL Rpt V4.3.py  Weekly VL Rpt V4.3dev GIDEON.py  Weekly VL Rpt V4.3dev.py  file permissions google api V1.0.py  quickstart.py  sort df using dict.py  test display text using pysimplegui v1.py  test edit file outside git.py  test open directory using pysimplegui v1.py  test open file using pysimplegui v1.py  test open file using pysimplegui v2.py  test radio box using pysimplegui v1.py  test split.py  upload file to google drive.py  upload pdf as google doc.py  upload ps as google doc.py
tests/: conftest.py  simulate_upload_errors.py  test_error_logging.py  test_upload_room_reports.py
weekly_report/: __main__.py  _run_report_.py  constants.py  create_admin_report.py  create_report_files.py  create_room_reports.py  factory_and_campaign_subtotals.py  gitupdater.json  initialize.py  make_chart.py  make_pivot.py  reminder.py  send_notification_email.py  upload_admin_report.py  upload_files.py  upload_room_reports.py
weekly_report/google_scripts/: create_drive_subfolder.py  create_google_services.py  delete_list_of_google_files.py  get_creds.py  get_google_file_or_folder_ids.py  get_sheet_values.py  google_scripts.py  permission_to_drive_file.py  upload_admin_report.py  upload_files.py  upload_room_reports.py  upload_sheet_to_drive.py
weekly_report/utils/: read_sincere_request_file.py  utils.py
