[project]
name = "weeklyreport"
version = "0.2.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "google>=3.0.0",
    "google-api-python-client>=2.190.0",
    "google-auth-oauthlib>=1.2.4",
    "bekgoogle",
    "sendgrid>=6.12.5",
]

# command run from comman line or in uvs is weekly-report-root and it will run
# main in _run_report_.py
[project.scripts]
weekly-report = "weekly_report._run_report_:main"

[tool.uv.sources]
bekgoogle = { git = "https://github.com/kramsman/bekgoogle.git" }
