[project]
name = "weeklyreport"
version = "0.2.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "google>=3.0.0",
    "google-api-python-client>=2.190.0",
    "google-auth-oauthlib>=1.2.4",
    "sendgrid>=6.12.5",
    "brevo-python>=4.0.0",
]

# Installs a console script named `weekly_report` that runs main() in
# weekly_report/_run_report_.py. The name on the left is the command typed on the
# command line; it must match the `command` field for this repo in rovprogs.sh.
[project.scripts]
weekly_report = "weekly_report._run_report_:main"

# The repo has a flat layout with a sibling `Work/` directory of loose scripts.
# Without this, setuptools' auto-discovery sees both `Work` and `weekly_report`
# as top-level packages and refuses to build. Limit the build to the real package.
# `namespaces = true` is required because weekly_report has no __init__.py files
# (it is a PEP 420 implicit namespace package); without it, discovery would find
# nothing and ship an empty wheel.
[tool.setuptools.packages.find]
include = ["weekly_report*"]
namespaces = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (may call external services)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
